<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jyamanouchi.golfscorebasic.UpdateActivity">

    <EditText
        android:id="@+id/edit_score1"
        style="@style/text_view_style"
        android:focusable="true"
        android:inputType="number"
        android:hint="@string/hint_score1" />

    <EditText
        android:id="@+id/edit_score2"
        style="@style/text_view_style"
        android:focusable="true"
        android:inputType="number"
        android:hint="@string/hint_score2" />

    <EditText
        android:id="@+id/edit_score3"
        style="@style/text_view_style"
        android:focusable="true"
        android:inputType="number"
        android:hint="@string/hint_score3" />

    <EditText
        android:id="@+id/edit_score4"
        style="@style/text_view_style"
        android:focusable="true"
        android:inputType="number"
        android:hint="@string/hint_score4" />

    <Button
        android:id="@+id/button_save"
        style="@style/button_style"
        android:text="@string/button_save" />

</LinearLayout>