<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:paddingBottom="8dp"
    android:paddingTop="8dp"
    tools:context="com.jyamanouchi.golfscorebasic.ScoreActivity">
	
	<TextView
        android:id="@+id/tv_hole"
        tools:text="@string/hole_label"
        android:textSize="@dimen/detail_size"
        android:textAlignment="center"
        android:layout_marginLeft="@dimen/margin_default"
        android:layout_width="@dimen/detail_width"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_par"
        tools:text="@string/par_label"
        android:textSize="@dimen/detail_size"
        android:layout_width="@dimen/detail_width"
        android:layout_marginLeft="@dimen/margin_default"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_score1"
        tools:text="@string/player1_label"
        android:textSize="@dimen/detail_size"

        android:layout_width="@dimen/detail_width"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_score2"
        tools:text="@string/player2_label"
        android:textSize="@dimen/detail_size"

        android:layout_width="@dimen/detail_width"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_score3"
        tools:text="@string/player3_label"
        android:textSize="@dimen/detail_size"

        android:layout_width="@dimen/detail_width"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_score4"
        tools:text="@string/player4_label"
        android:textSize="@dimen/detail_size"

        android:layout_width="@dimen/detail_width"
        android:layout_height="wrap_content" />
</LinearLayout>
		